// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`FreeTextForm tests  rendering active form 1`] = `
<div
  style={
    Object {
      "flexGrow": 1,
      "padding": 8,
    }
  }
>
  <WithStyles(Grid)
    container={true}
    display="row"
    spacing={16}
  >
    <WithStyles(Grid)
      item={true}
      sm={10}
      xs={12}
    >
      <TextField
        className="mui-long-labels-fix"
        disabled={false}
        errorText={null}
        floatingLabelFixed={false}
        floatingLabelText="Item name"
        fullWidth={true}
        hintText="Please type the item name"
        multiLine={false}
        onChange={[Function]}
        onKeyPress={[Function]}
        rows={1}
        type="text"
        underlineShow={true}
        value=""
      />
    </WithStyles(Grid)>
    <WithStyles(Grid)
      item={true}
      sm={2}
      xs={12}
    >
      <RaisedButton
        className="is-mui-spacing-button"
        disabled={true}
        fullWidth={true}
        label="Add"
        labelPosition="after"
        onClick={[Function]}
        primary={true}
        secondary={false}
      />
    </WithStyles(Grid)>
  </WithStyles(Grid)>
</div>
`;

exports[`FreeTextForm tests  rendering disabled form 1`] = `
<div
  style={
    Object {
      "flexGrow": 1,
      "padding": 8,
    }
  }
>
  <WithStyles(Grid)
    container={true}
    display="row"
    spacing={16}
  >
    <WithStyles(Grid)
      item={true}
      sm={10}
      xs={12}
    >
      <TextField
        className="mui-long-labels-fix"
        disabled={true}
        errorText={null}
        floatingLabelFixed={false}
        floatingLabelText="Item name"
        fullWidth={true}
        hintText="Please type the item name"
        multiLine={false}
        onChange={[Function]}
        onKeyPress={[Function]}
        rows={1}
        type="text"
        underlineShow={true}
        value=""
      />
    </WithStyles(Grid)>
    <WithStyles(Grid)
      item={true}
      sm={2}
      xs={12}
    >
      <RaisedButton
        className="is-mui-spacing-button"
        disabled={true}
        fullWidth={true}
        label="Add"
        labelPosition="after"
        onClick={[Function]}
        primary={true}
        secondary={false}
      />
    </WithStyles(Grid)>
  </WithStyles(Grid)>
</div>
`;

exports[`FreeTextForm tests  rendering reminder to add input 1`] = `
<div
  style={
    Object {
      "flexGrow": 1,
      "padding": 8,
    }
  }
>
  <WithStyles(Grid)
    container={true}
    display="row"
    spacing={16}
  >
    <WithStyles(Grid)
      item={true}
      sm={10}
      xs={12}
    >
      <TextField
        className="mui-long-labels-fix"
        disabled={false}
        errorText={null}
        floatingLabelFixed={false}
        fullWidth={true}
        multiLine={false}
        onChange={[Function]}
        onKeyPress={[Function]}
        rows={1}
        type="text"
        underlineShow={true}
        value="one"
      />
      <WithStyles(Typography)
        className=""
        variant="caption"
      >
        reminder text
      </WithStyles(Typography)>
    </WithStyles(Grid)>
    <WithStyles(Grid)
      item={true}
      sm={2}
      xs={12}
    >
      <RaisedButton
        className="is-mui-spacing-button"
        disabled={true}
        fullWidth={true}
        label="Add"
        labelPosition="after"
        onClick={[Function]}
        primary={true}
        secondary={false}
      />
    </WithStyles(Grid)>
  </WithStyles(Grid)>
</div>
`;
